--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "build": "npx tsc"
   },
   "dependencies": {
+    "@types/pouchdb": "^6.4.0",
     "express": "^4.17.1",
-    "mysql2": "^2.2.5"
+    "leveldown": "^5.6.0",
+    "mysql2": "^2.2.5",
+    "pouchdb": "^7.2.2",
+    "pouchdb-find": "^7.2.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.12",
